log
Sun 27 Nov 2022 10:53:17 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:12: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   66 |     return list;
      |            ^~~~
      |            lista
sudoku.c:66:12: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:53:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   53 |     List* lista=createList();
      |           ^~~~~
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f143852
Sun 27 Nov 2022 10:53:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2d4a5c8
Sun 27 Nov 2022 10:53:30 PM UTC: 
 sudoku.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:24: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   68 |               pushBack(list, adjNode);
      |                        ^~~~
      |                        lista
sudoku.c:68:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
89eb7dc
Sun 27 Nov 2022 10:53:42 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a8254b9
Sun 27 Nov 2022 10:56:14 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:7: error: unused variable ‘matriz’ [-Werror=unused-variable]
   49 |   int matriz[10];
      |       ^~~~~~
sudoku.c:48:7: error: unused variable ‘columna’ [-Werror=unused-variable]
   48 |   int columna[10];
      |       ^~~~~~~
sudoku.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b94e2a6
Sun 27 Nov 2022 10:57:22 PM UTC: 
 sudoku.c | 36 +++++++++++++++++++++++++++++-------
 1 file changed, 29 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:72:30: error: ‘submatriz’ undeclared (first use in this function); did you mean ‘matriz’?
   72 |     for (int z=0; z<10; z++) submatriz[z]= 0;
      |                              ^~~~~~~~~
      |                              matriz
sudoku.c:72:30: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:49:7: error: unused variable ‘matriz’ [-Werror=unused-variable]
   49 |   int matriz[10];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
02bec11
Sun 27 Nov 2022 10:57:29 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
e807022
Sun 27 Nov 2022 10:59:58 PM UTC: 
 sudoku.c | 26 ++++++++++++++------------
 1 file changed, 14 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:29: error: ‘k’ undeclared (first use in this function)
   57 |         if (fila[n->sudo[i][k]] == 1) return 0;
      |                             ^
sudoku.c:57:29: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:51:13: error: unused variable ‘z’ [-Werror=unused-variable]
   51 |   int x, y, z; //o-k
      |             ^
sudoku.c:51:10: error: unused variable ‘y’ [-Werror=unused-variable]
   51 |   int x, y, z; //o-k
      |          ^
sudoku.c:51:7: error: unused variable ‘x’ [-Werror=unused-variable]
   51 |   int x, y, z; //o-k
      |       ^
sudoku.c:50:13: error: unused variable ‘p’ [-Werror=unused-variable]
   50 |   int i, o, p;
      |             ^
sudoku.c:50:10: error: unused variable ‘o’ [-Werror=unused-variable]
   50 |   int i, o, p;
      |          ^
sudoku.c:50:7: error: unused variable ‘i’ [-Werror=unused-variable]
   50 |   int i, o, p;
      |       ^
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
ebc7702
Sun 27 Nov 2022 11:00:08 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:29: error: ‘k’ undeclared (first use in this function)
   55 |         if (fila[n->sudo[i][k]] == 1) return 0;
      |                             ^
sudoku.c:55:29: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:47:7: error: variable ‘fila’ set but not used [-Werror=unused-but-set-variable]
   47 |   int fila[10];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
0db82ce
